--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "eletype",
   "version": "0.3.4",
+  "homepage": "https://Ashutoshbot1.github.io/Type-Speed-Test-2",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -25,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "npm run build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
