--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eletype",
+  "name": "type-speed",
   "version": "0.3.4",
   "homepage": "https://Ashutoshbot1.github.io/Type-Speed-Test-2",
   "private": true,
@@ -21,12 +21,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
